# fast-api

./: .env.example  .gitignore  Dockerfile  main.py  pyproject.toml
api/: index.py
app/: app.py
